--- a/shankar.css
+++ b/shankar.css
@@ -146,3 +146,11 @@ header
 {
     color:#333;
 }
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+  .button {
+    width: 100%;
+  }
+}
